(fix) xScale not showing on firefox now shows

--- a/develop/sass/chart/variation.css
+++ b/develop/sass/chart/variation.css
@@ -56,6 +56,11 @@
 #variation > label.active{
   display: block;
 }
+
+#variation > #chart > svg.variationChart{
+  overflow: initial;
+}
+
 #tooltip-variation {
         position: absolute;
         width: 200px;
